# webapp-template

./: .gitignore  README.md  procmux.yaml  pyproject.toml
backend/: pyproject.toml  uvicorn.ini
backend/backend/: api.py  logger.py  main.py
backend/backend/auth/: auth.py  models.py
backend/backend/cache/: __init__.py  cache_manager.py
backend/backend/database/: __init__.py  conn.py  handler.py
backend/backend/database/tables/: base.py
backend/backend/rate_limiter/: __init__.py  depends.py
backend/backend/routes/: __init__.py  home_route.py
backend/docs/: conf.py  index.rst
frontend/: .env.local  ARCHITECTURE.md  BOILERPLATE_SUMMARY.md  DEVELOPMENT_GUIDE.md  FILES_INDEX.md  FRONTEND.md  README.md  SETUP_COMPLETE.sh  STYLE_MANAGER.md  STYLE_QUICK_REFERENCE.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: root.tsx  routes.ts
frontend/app/components/: common.tsx  header-client.tsx  layout.tsx  style-example.tsx
frontend/app/routes/: dashboard.tsx  home.tsx  login.tsx  register.tsx
frontend/app/services/: auth.service.ts  user.service.ts
frontend/app/welcome/: welcome-client.tsx  welcome.tsx
scripts/: build_backend_docs.py
