[tool.poetry]
name = "webapp-template"
version = "0.1.0"
description = ""
authors = ["ramsy0dev <ramsy0dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
textual = "^7.3.0"
rich = "^14.2.0"
procmux = "^2.0.3"
uvicorn = "^0.40.0"
sphinx-autobuild = "^2025.8.25"
sphinx-book-theme = "^1.1.4"
typer = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
