[tool.poetry]
name = "webapp-template"
version = "0.1.0"
description = ""
authors = ["ramsy0dev <ramsy0dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
sphinx-autobuild = "^2025.8.25"
textual = "^7.3.0"
rich = "^14.2.0"
typer = "^0.21.1"
sqlalchemy = "^2.0.45"
psycopg2-binary = "^2.9.11"
orjson = "^3.11.5"
sphinx = "^9.1.0"
sphinx-book-theme = "^1.1.4"
loguru = "^0.7.3"
python-json-logger = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
